# taxalens

./: .gitignore  BUILD_WEEK_BASELINE.md  HUMAN_DECISIONS.md  JUDGE_GUIDE.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  UPSTREAM_BIOMINER.md  pyproject.toml
provenance/: biominer_migration_manifest.yaml  geographic_impact_codex_session.json  githits.jsonl  primary_codex_session.json  review_attestations.yaml
scripts/: build_baseline_provider_union.py  build_flickr_audit_campaign.py  build_flickr_geography_long.py  build_flickr_geography_verification.py  build_geographic_impact.py  build_geographic_milestone_readiness.py  build_geographic_quality_snapshot.py  build_reference_audit_campaign.py  build_repository_storage.py  build_reviewer_control_campaign.py  build_truthful_demo_fixture.py  import_biominer_analytics.py  import_biominer_baseline_geography.py  import_biominer_handoff.py  import_biominer_prototype_artifacts.py  import_duckdb_wasm_extension.py  import_geographic_boundaries.py  summarize_geographic_usability_study.py  summarize_verification_impact.py  verify_biominer_boundary.py  verify_demo.py  verify_flickr_geography_handoff.py  verify_geographic_boundaries.py  verify_geographic_impact.py  verify_native_lint.py  verify_provenance.py
submission/: AI_CODE_PROVENANCE_REPORT.md  BUILD_WEEK_DELTA.md  DEVPOST.md  PRESENTATION.md  VIDEO_STORYBOARD.md
taxalens/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_evidence_availability.py  test_flickr_audit_campaign_artifact.py  test_geographic_contract_parity.py  test_geographic_contracts.py  test_geographic_milestone_readiness.py  test_geographic_quality_snapshot.py  test_geographic_release_semantics.py  test_geographic_usability_report.py  test_geographic_usability_study_contract.py  test_import_biominer_analytics.py  test_import_biominer_handoff.py  test_import_biominer_prototype_artifacts.py  test_import_duckdb_wasm_extension.py  test_judge_bundle_contract.py  test_local_replay.py  test_product_facade_integration.py  (+13 more)
(+710 files in other folders)
