[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxalens"
version = "0.1.0"
description = "Credential-free replay and evidence operations for auditable biodiversity research."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kris Kari" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "jsonschema[format]>=4.25,<5",
]

[project.scripts]
taxalens = "taxalens.cli:entrypoint"

[dependency-groups]
replay = [
  "h3>=4.5,<5",
  "pillow>=12,<13",
  "polars>=1.30,<2",
]
parquet = [
  "polars>=1.30,<2",
  "pyarrow>=18,<24",
]
demo = [
  { include-group = "replay" },
  { include-group = "parquet" },
]
test = [
  { include-group = "demo" },
  "pytest>=8,<10",
]
dev = [
  { include-group = "test" },
  "ruff>=0.12,<1",
]
vision = [
  { include-group = "replay" },
]

[tool.setuptools.packages.find]
where = ["."]
include = ["taxalens*", "packages.replay.src*", "packages.contracts.schema*"]
namespaces = true

[tool.setuptools.package-data]
"packages.contracts.schema" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/replay/tests"]
pythonpath = ["."]
addopts = ["-ra", "--strict-config", "--strict-markers"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["taxalens", "packages/replay/src", "tests", "packages/replay/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
package = true
default-groups = ["test"]
required-version = ">=0.11"
